syntax = "proto3";

package proto_define;

option go_package = "mmo-server/proto_define";

import "proto_define/message.proto";

// 玩家位置更新请求
message PlayerPositionRequest {
  string player_id = 1;        // 玩家ID
  Vector3 position = 2;        // 位置
  Vector3 rotation = 3;        // 旋转
  Vector3 velocity = 4;        // 速度
  int64 timestamp = 5;         // 时间戳
  map<string, string> extra_data = 6; // 额外数据，用于扩展
}

// 玩家位置更新响应
message PlayerPositionResponse {
  bool success = 1;            // 是否成功
  string error_message = 2;    // 错误信息
  int64 timestamp = 3;         // 服务器时间戳
  Vector3 corrected_position = 4; // 服务器校正后的位置（如果需要）
  Vector3 corrected_rotation = 5; // 服务器校正后的旋转（如果需要）
  repeated EntityPosition nearby_entities = 6; // 附近的实体
  map<string, string> extra_data = 7; // 额外数据，用于扩展
} 